fixed white space issue to the right of the page and added spacing between landing page components

--- a/resources/src/sass/_base.scss
+++ b/resources/src/sass/_base.scss
@@ -22,6 +22,10 @@ html {
   box-sizing: border-box;
 }
 
+body{
+    overflow-x:hidden;
+}
+
 .lead {
     color: $text-gray;
 }
